--- a/public.html
+++ b/public.html
@@ -16,11 +16,55 @@
 </head>
 <body>
   <header id="home" class="header">
-    <div class="navigation--container">
+    <nav class="nav">
+    <div class="navigationn container">
       <div class="logo">
         <h1>Style Way</h1>
       </div>
+
+      <div class="menu">
+        <div class="top-nav">
+          <div class="logo">
+          <h1>Style Way</h1>
+        </div>
+        <div class="close">
+          <i class='bx bx-x'></i>
+        </div>
+        </div>
+
+        <ul class="nav-list">
+          <li class="nav-item">
+            <a href="#home" class="nav-link">Home</a>
+          </li>
+          <li class="nav-item">
+            <a href="product.html" class="nav-link">Products</a>
+          </li>
+          <li class="nav-item">
+            <a href="#about" class="nav-link">About</a>
+          </li>
+          <li class="nav-item">
+            <a href="#contact" class="nav-link">Contact</a>
+          </li>
+          <li class="nav-item">
+            <a href="#account" class="nav-link">Account</a>
+          </li>
+          <li class="nav-item">
+            <a href="cart.html" class="nav-link icon"
+            ><li class="bx bx-shopping-bag"></li
+            ></a>
+          </li>
+        </ul>
+      </div>
+
+      <a href="cart.html" class="cart-icon">
+        <li class="bx bx-shopping-bag"></li>
+      </a>
+
+      <div class="hamburger">
+        <li class="bx bx-menu"></li>
+      </div>
     </div>
+   </nav>
   </header>
   
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.min.js"></script>
