--- a/public.html
+++ b/public.html
@@ -6,10 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
     <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
 
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
     
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
+
     <title>Style Way - Ecommerce Website</title>
     <link rel="stylesheet" href="./css/styles.css">
     
@@ -17,12 +18,12 @@
 <body>
   <header id="home" class="header">
     <nav class="nav">
-    <div class="navigationn container">
+    <div class="navigation container">
       <div class="logo">
         <h1>Style Way</h1>
       </div>
 
-      <div class="menu">
+      <div class="menu show">
         <div class="top-nav">
           <div class="logo">
           <h1>Style Way</h1>
@@ -59,10 +60,9 @@
       <a href="cart.html" class="cart-icon">
         <li class="bx bx-shopping-bag"></li>
       </a>
-
-      <div class="hamburger">
-        <li class="bx bx-menu"></li>
-      </div>
+      <div class="menu-icon">
+        <li class="bx bx-menu"></li>    
+        </div>
     </div>
    </nav>
   </header>
