--- a/public.html
+++ b/public.html
@@ -23,7 +23,7 @@
         <h1>Style Way</h1>
       </div>
 
-      <div class="menu show">
+      <div class="menu">
         <div class="top-nav">
           <div class="logo">
           <h1>Style Way</h1>
@@ -65,6 +65,17 @@
         </div>
     </div>
    </nav>
+
+   <img src="./images/banner.png" class="hero-img" alt="">
+
+   <div class="hero-content">
+     <h2><span class="discount">70%</span>SALE OFF</h2>
+     <h1>
+       <span>Summer Vibes</span>
+       <span>mode on</span>
+     </h1>
+     <a href="#" class="btn">Shop now</a>
+   </div>
   </header>
   
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.min.js"></script>
