--- a/public.html
+++ b/public.html
@@ -77,6 +77,49 @@
      <a href="#" class="btn">Shop now</a>
    </div>
   </header>
+
+  <main>
+    <section class="section advert">
+      <div class="advert-center container">
+        <div class="advert-box">
+          <div class="dotted">
+            <div class="content">
+              <h2>
+                Girls <br/>
+                CLothing
+              </h2>
+              <h4>Worlds Best Brands</h4>
+            </div>
+          </div>
+            <img src="./images/add1.png" alt="">
+      </div>
+      <div class="advert-box">
+        <div class="dotted">
+          <div class="content">
+            <h2>
+              Girls <br/>
+              CLothing
+            </h2>
+            <h4>Worlds Best Brands</h4>
+          </div>
+        </div>
+          <img src="./images/add2.jpg" alt="">
+    </div>
+    <div class="advert-box">
+      <div class="dotted">
+        <div class="content">
+          <h2>
+            Girls <br/>
+            CLothing
+          </h2>
+          <h4>Worlds Best Brands</h4>
+        </div>
+      </div>
+        <img src="./images/add1.png" alt="">
+  </div>
+      </div>
+    </section>
+  </main>
   
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.min.js"></script>
     <script src="./JS/index.js"></script>
