--- a/public.html
+++ b/public.html
@@ -91,7 +91,7 @@
               <h4>Worlds Best Brands</h4>
             </div>
           </div>
-            <img src="./images/add1.png" alt="">
+          <img src="./images/add1.png" alt="">
       </div>
       <div class="advert-box">
         <div class="dotted">
@@ -103,7 +103,7 @@
             <h4>Worlds Best Brands</h4>
           </div>
         </div>
-          <img src="./images/add2.jpg" alt="">
+        <img src="./images/add2.png" alt="">
     </div>
     <div class="advert-box">
       <div class="dotted">
@@ -115,8 +115,107 @@
           <h4>Worlds Best Brands</h4>
         </div>
       </div>
-        <img src="./images/add1.png" alt="">
+      <img src="./images/add3.png" alt="">
   </div>
+      </div>
+    </section>
+
+    <section class="section featured">
+      <div class="title">
+        <h1>Featured Products</h1>
+      </div>
+
+      <div class="product-center container">
+        <div class="product">
+          <div class="product-header">
+            <img src="./images/picture1.jpg" alt="">
+            <ul class="icons">
+              <span><i class="bx bx-heart"></i></span>
+              <span><i class="bx bx-shopping-bag"></i></span>
+              <span><i class="bx bx-search"></i></span>
+            </ul>
+          </div>
+          <div class="product-footer">
+            <a href="#">
+              <h3>Girl's Top</h3>
+            </a>
+
+            <div class="rating">
+              <i class="bx bxs-start"></i>
+              <i class="bx bxs-start"></i>
+              <i class="bx bxs-start"></i>
+              <i class="bx bxs-start"></i>
+            </div>
+            <h4 class="price"></h4>
+          </div>
+          <div class="product">
+            <div class="product-header">
+              <img src="./images/picture1.jpg" alt="">
+              <ul class="icons">
+                <span><i class="bx bx-heart"></i></span>
+                <span><i class="bx bx-shopping-bag"></i></span>
+                <span><i class="bx bx-search"></i></span>
+              </ul>
+            </div>
+            <div class="product-footer">
+              <a href="#">
+                <h3>Girl's Top</h3>
+              </a>
+  
+              <div class="rating">
+                <i class="bx bxs-start"></i>
+                <i class="bx bxs-start"></i>
+                <i class="bx bxs-start"></i>
+                <i class="bx bxs-start"></i>
+              </div>
+              <h4 class="price"></h4>
+            </div>
+            <div class="product">
+              <div class="product-header">
+                <img src="./images/picture1.jpg" alt="">
+                <ul class="icons">
+                  <span><i class="bx bx-heart"></i></span>
+                  <span><i class="bx bx-shopping-bag"></i></span>
+                  <span><i class="bx bx-search"></i></span>
+                </ul>
+              </div>
+              <div class="product-footer">
+                <a href="#">
+                  <h3>Girl's Top</h3>
+                </a>
+    
+                <div class="rating">
+                  <i class="bx bxs-start"></i>
+                  <i class="bx bxs-start"></i>
+                  <i class="bx bxs-start"></i>
+                  <i class="bx bxs-start"></i>
+                </div>
+                <h4 class="price"></h4>
+              </div>
+              <div class="product">
+                <div class="product-header">
+                  <img src="./images/picture1.jpg" alt="">
+                  <ul class="icons">
+                    <span><i class="bx bx-heart"></i></span>
+                    <span><i class="bx bx-shopping-bag"></i></span>
+                    <span><i class="bx bx-search"></i></span>
+                  </ul>
+                </div>
+                <div class="product-footer">
+                  <a href="#">
+                    <h3>Girl's Top</h3>
+                  </a>
+      
+                  <div class="rating">
+                    <i class="bx bxs-star"></i>
+                    <i class="bx bxs-star"></i>
+                    <i class="bx bxs-star"></i>
+                    <i class="bx bxs-star"></i>
+                    <i class="bx bxs-star"></i>
+                  </div>
+                  <h4 class="price"></h4>
+                </div>
+        </div>
       </div>
     </section>
   </main>
@@ -124,4 +223,4 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.min.js"></script>
     <script src="./JS/index.js"></script>
 </body>
-</html>
+</html> 
