--- a/public.html
+++ b/public.html
@@ -17,7 +17,7 @@
 </head>
 <body>
   <header id="home" class="header">
-    <nav class="nav">
+    <nav class="nav ">
     <div class="navigation container">
       <div class="logo">
         <h1>Style Way</h1>
@@ -35,19 +35,19 @@
 
         <ul class="nav-list">
           <li class="nav-item">
-            <a href="#home" class="nav-link">Home</a>
+            <a href="#home" class="nav-link scroll-link">Home</a>
           </li>
           <li class="nav-item">
             <a href="product.html" class="nav-link">Products</a>
           </li>
           <li class="nav-item">
-            <a href="#about" class="nav-link">About</a>
+            <a href="#about" class="nav-link scroll-link">About</a>
           </li>
           <li class="nav-item">
-            <a href="#contact" class="nav-link">Contact</a>
+            <a href="#contact" class="nav-link scroll-link">Contact</a>
           </li>
           <li class="nav-item">
-            <a href="#account" class="nav-link">Account</a>
+            <a href="#account" class="nav-link scroll-link">Account</a>
           </li>
           <li class="nav-item">
             <a href="cart.html" class="nav-link icon"
@@ -305,7 +305,7 @@
         </div>
         <div class="product">
           <div class="product-header">
-            <img src="./images/picture1.jpg" alt="">
+            <img src="./images/picture2.jpg" alt="">
             <ul class="icons">
               <span><i class="bx bx-heart"></i></span>
               <span><i class="bx bx-shopping-bag"></i></span>
@@ -329,7 +329,7 @@
         </div>
         <div class="product">
           <div class="product-header">
-            <img src="./images/picture1.jpg" alt="">
+            <img src="./images/picture4.jpg" alt="">
             <ul class="icons">
               <span><i class="bx bx-heart"></i></span>
               <span><i class="bx bx-shopping-bag"></i></span>
@@ -353,7 +353,7 @@
         </div>
         <div class="product">
           <div class="product-header">
-            <img src="./images/picture1.jpg" alt="">
+            <img src="./images/picture3.jpg" alt="">
             <ul class="icons">
               <span><i class="bx bx-heart"></i></span>
               <span><i class="bx bx-shopping-bag"></i></span>
@@ -377,7 +377,7 @@
         </div>
         <div class="product">
           <div class="product-header">
-            <img src="./images/picture1.jpg" alt="">
+            <img src="./images/picture5.jpg" alt="">
             <ul class="icons">
               <span><i class="bx bx-heart"></i></span>
               <span><i class="bx bx-shopping-bag"></i></span>
@@ -401,7 +401,7 @@
         </div>
         <div class="product">
           <div class="product-header">
-            <img src="./images/picture1.jpg" alt="">
+            <img src="./images/picture2.jpg" alt="">
             <ul class="icons">
               <span><i class="bx bx-heart"></i></span>
               <span><i class="bx bx-shopping-bag"></i></span>
@@ -554,8 +554,33 @@
           <a href="#">NewsLetter</a>
           <a href="#">Returns</a>
         </div>
-      </div>
-    </div>
+        <div class="footer-center">
+          <h3>CONTACT US</h3>
+          <div>
+            <span>
+              <i class="fas fa-map-market-alt"></i>
+            </span>
+            21 Jordan Apartment, Jordan Street, Mumbai
+          </div>
+          <div>
+            <span>
+              <i class="far fa-envelope"></i>
+            </span>
+            company@gmail.com
+          </div>
+          <div>
+            <span>
+              <i class="fas fa-phone"></i>
+            </span>
+            222-002-22
+          </div>
+          <div>
+            <span>
+              <i class="far fa-paper-plane"></i>
+            </span>
+            Jordan Apartment, Mumbai
+          </div>
+        </div>
   </footer>
   
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.min.js"></script>
